# etl-pipeline

./: .gitignore  PDF_scrape_text.py  Pipfile  README.md  Ward Level Data.ipynb  backend.ini  index.md  luigi.cfg  pyproject.toml  report.html  requirements.txt  ward_population.csv  ward_positive8.21.20.csv  ward_positive8.24.20.csv  ward_positive8.26.20.csv  ward_positive8.28.20.csv
.ipynb_checkpoints/: Ward Level Data-checkpoint.ipynb
API Exploration/: Exploration Notebook.ipynb
R_scripts/: .Rhistory  Epistim_rt_districts_script.R  Epistim_rt_script.R  Epistim_rt_script2.R  Epistim_rt_wards_script.R  Rt_calcs.R  doub_time.r  dt_script.R  dt_script.py  epiestim_test2.R  foreach_test.r  push_Rt_to_gsheets.py  push_Rt_to_gsheets_multiple_cities  readme_rt  readme_rt.md
backend/: __init__.py  config.py  gsheet.py  gsheet_repository.py  orgestration.py  repository.py
data_pipeline/: Calculate metrics.ipynb  calculate_metrics.py  extract_history.py  (+3 more)
pipeline/: README.md  README.rst  pyproject.toml  requirements.txt  setup.py
pipeline/pipeline/: calculate_metrics.py  calculate_metrics_file.py  config.py  dashboard_pdf_scrapper.py  extract_history.py  extract_history_file.py  ward_data_computation.py  ward_metrics.py
pipeline/pipeline/scripts/: scrap_old_pdfs_to_gsheet.py
pipeline/pipeline/tasks/: __init__.py  cities_metrics.py  cities_metrics_v1.py  dropbox.py  dropbox_clean.py  dropbox_utils.py  gcloud.py  push_Rt_to_gsheets.py  spreadsheets.py  stopcoronavirus_mcgm_scrapping.py  ward_metrics.py
pipeline/tests/: test_calculate_metrics_file.py  test_pipeline.py
(+120 files in other folders)
