[tool.poetry]
name = "etl-pipeline"
version = "0.1.0"
description = "ETL project for india covid dashboard for cities"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
