[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["rscnt <rascnt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
numpy = "^1.19.2"
sklearn = "^0.0"
pdfplumber = "^0.5.23"
click = "^7.1.2"
luigi = {extras = ["toml"], version = "^3.0.1"}
requests = "^2.24.0"
dropbox = "^10.4.1"
tabula-py = "^2.2.0"
gspread = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
